package org.example.repository;

public interface RuteRepositoryPort {
}
