@startuml
title Klassediagram – Togsystem (OnlyTrains)
hide empty members
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F8F8F8
    BorderColor #333333
}

' =======================
' Klasser
' =======================
interface TrainRepositoryPort{
    + AddTrain(train : Train) : void
    + getTrainsWithStopFromTime(stationName : String, time : LocalTime) : ArrayList<Train>
    + loadTrainsFromJson(filepath : String) : void
    + removeTrain(trainId : String) : void
    + UpdateTrain(train : Train) : void
    + clearAllTrains(password : String) : void
    + getTrainById(trainId : String) : Train
    + getTrainsByRoute(routeId : String) : ArrayList<Train>
}
interface RuteRepositoryPort{
    + loadRoutesFromJson(filepath : String)) : void
    + getRuteByName(name : String) : Rute
    + getRuteById(id : String) : Rute
    + commonStopsBetweenTwoRoutes(IdRoute1 : String, IdRoute2 : String) : ArrayList<Station>
    + stopExistsInRoute(stop : Station, route : Rute) : boolean
}

interface StationRepositoryPort{
    + loadStationsFromCSV(filepath : String) : void
    + loadStationsFromJson(filepath : String) : void
    + loadStationsFromNeo4j((filepath : String) : void
    + addStation(stationName : String)) : void
    + stationExists(stationName : String)) : boolean
    + getStationByName(stationName : String) : Station
    + getStationById(stationId : String) : station
}

class Rute {
    - id : String
    - name : String
    - stops : ArrayList<Station>
    - outbound : boolean
    + addTrainStop(stop : Station) : void
    + getId() : String
    + setId(id : String)
    + getStops() : ArrayList<Station>
    + setStops(stops : ArrayList<Station>)
}

class Station {
    - id : String
    - name : String
    + getId() : String
    + getName() : String
    + setId(id : String) : void
    + setName(name : String) : void
}

class Train {
    - id : String
    - route : Rute
    - trainStops: ArrayList<TrainStop>
    + trainStopsAtStation(stationName : String) : boolean
    + getStopByName(stationName : String): TrainStop
    + addTrainStop(trainStop : TrainStop) : void
}

class TrainStop {
    - stop : Station
    - arrivalTime : LocalTime
    - track : int
    - isDelayed : boolean
    - IsCancelled: boolean
    - departureTime : LocalTime
    + getStation() : Station
    + getArrivalTime() : LocalTime
    + getDepartureTime() : LocalTime
}

class RuteRepository implements RuteRepositoryPort{
    - ruter : ArrayList<Rute>
    - AvailableStations : StationRepository
    + getAll() : ArrayList<Rute>
    + addRute(r : Rute)
    + findById(id : String) : Rute
}


class StationRepository implements StationRepositoryPort{
    - stations : ArrayList<Station>
    + getAll() : ArrayList<Station>
    + addStation(s : Station)
}

class TrainRepository implements TrainRepositoryPort {
    - trains : ArrayList<Train>
    - availableRoutes : RuteRepository
    + getAll() : ArrayList<Train>
    + addTrain(t : Train)
}

class Main{
 + start() : void
}

' =======================
' Relasjoner
' =======================

class Run{

}

Train --> Rute : følger
Train o-- TrainStop : lagrer
TrainStop --> Station : refererer til

Rute o-- Station
StationRepository <-- RuteRepository
StationRepository o-- Station : lagrer

RuteRepository o-- Rute : lagrer

TrainRepository --> RuteRepository
TrainRepository o-- Train : lagrer

Main --> RuteRepository : bruker
Main --> StationRepository : bruker
Main --> TrainRepository : bruker

Run --> Main
@enduml